# mftx

./: .gitignore  Cargo.toml  MFTX_HANDOFF.md  README.md
.claude/: dev-preview.cmd  launch.json
apps/desktop/: .npmrc  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  compat.rs  events.rs  lib.rs  main.rs  models.rs  runtime.rs
apps/desktop/src/components/: SetupScreen.tsx  Shell.tsx  TransferDialog.tsx  WindowControls.tsx  ui.tsx
apps/desktop/src/components/panels/: ActivityPanel.tsx  InboxPanel.tsx  PeersPanel.tsx  SettingsPanel.tsx  TransferPanel.tsx
apps/desktop/src/lib/: api.ts  format.ts  listen.ts  platform.ts  theme.ts  types.ts  use-app-store.ts
crates/core/: Cargo.toml
crates/core/src/: app_config.rs  discovery.rs  fs_manifest.rs  lib.rs  transfer.rs  trust_store.rs
crates/core/src/peer/: config.rs  discovery_service.rs  errors.rs  initiator.rs  limits.rs  mod.rs  node.rs  progress.rs  responder.rs  session.rs  table.rs
crates/core/tests/: app_config_tests.rs  core_tests.rs  e2e_tests.rs  peer_tests.rs  trust_store_tests.rs
crates/mac-cli/: Cargo.toml
crates/mac-cli/src/: main.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: crypto.rs  frame.rs  lib.rs  manifest.rs  path.rs
crates/protocol/tests/: protocol_tests.rs
crates/win-peer/: Cargo.toml
crates/win-peer/src/: lib.rs  main.rs
docs/architecture/: desktop-gui-plan.md  incoming-transfer-trust-plan.md  peernode-p2p-architecture.md
docs/prompts/: goal-desktop-gui-implementation-prompt.md  goal-incoming-transfer-trust-implementation-prompt.md  goal-peernode-p2p-implementation-prompt.md
