[workspace]
members = [
    "crates/protocol",
    "crates/core",
    "crates/mac-cli",
    "crates/win-peer",
    "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
bincode = "1.3"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
hex = "0.4"
hostname = "0.4"
rand = "0.8"
ratatui = "0.29"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.6"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
