[package]
name = "mft"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
hostname.workspace = true
mft-core = { path = "../core" }
mft-protocol = { path = "../protocol" }
ratatui.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
