[package]
name = "mft-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
argon2.workspace = true
bincode.workspace = true
blake3.workspace = true
chacha20poly1305.workspace = true
hex.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

